[package]
name = "rambda"
version = "0.1.0"
authors = ["dgc"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitfailure = "0.5.1"
log = "0.4.0"
env_logger = "0.7.1"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
